--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ a:hover, a:focus, a:active {
         padding-bottom: 1rem;
     }
         #site-navigation .menu-item a {
-            font-family: "Roboto Condensed", sans-serif;
+            font-family: helvetica, sans-serif;
             color: #fff;
             font-size:  1.167rem;
             font-weight: 700;
@@ -102,6 +102,28 @@ a:hover, a:focus, a:active {
         #site-navigation .menu-item.current-menu-item a  {
             color: #e55225;
         }
+
+    .menu-toggle {
+        font-weight: bold;
+        border: 1px #fff solid;
+        background: #000;
+        color: #fff;
+        font-size: 1rem;
+    }    
+        .menu-toggle:before {
+            font-family: FontAwesome !important;
+            content: '\f0c9';
+            padding-right: 0.3rem;
+        }
+    .ui.grid .menu-menu-default-container {
+        padding: 0rem;
+    }
+    .main-navigation ul.mobile-ext-menu {
+        display: none;
+    }    
+    .main-navigation.toggled ul.mobile-ext-menu {
+        display: none;
+    }
     
     /** FOOTER */
     .site-footer {
@@ -289,7 +311,11 @@ a:hover, a:focus, a:active {
                     }
     /**
      * News Item end
-     */     
+     */  
+     
+    .post .entry-content {
+        text-align: justify !important;
+    } 
     
     /**
      * Box widget
@@ -341,8 +367,9 @@ a:hover, a:focus, a:active {
      * News Pagination
      */
     
-    .pagination {
+    .pagination > div {
         overflow: hidden;
+        margin-bottom: 2rem;
     } 
         .pagination .page-numbers {
             font-size: 1em;
